<resources>
    <string name="app_name">Health-Book</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="patient_name">Patient Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="phs_id">PHS ID</string>
    <string name="default_age_value">26</string>
    <string name="default_phs_id">123456</string>
    <string name="phs_val_default">1234567</string>
    <string name="default_gender">Female</string>
    <string name="default_bg">O+</string>
    <string name="blood_group">Blood Group</string>
    <string name="sample_doctor">V. K. Gupta</string>
    <string name="visited_on">Visited On</string>
</resources>
