<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/basic_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/app_left_margin"
    android:layout_marginRight="@dimen/app_right_margin"
    android:elevation="12dp">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/age"
            android:text="@string/age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sex"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_sex_value"
            app:layout_constraintHorizontal_bias="0.694"
            app:layout_constraintStart_toEndOf="@+id/tv_age"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_phs_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/phs_id"
            android:text="@string/phs_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_age" />

        <TextView
            android:id="@+id/tv_value_age"
            android:layout_width="55dp"
            android:layout_height="23dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/default_age_value"
            android:text="@string/default_age_value"
            app:layout_constraintEnd_toStartOf="@+id/tv_sex"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_phs_id_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/default_phs_id"
            android:text="@string/phs_val_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_value_age"
            app:layout_constraintTop_toTopOf="@+id/tv_phs_id"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_group"
            app:layout_constraintStart_toStartOf="@+id/tv_sex"
            app:layout_constraintTop_toTopOf="@+id/tv_phs_id_value" />

        <TextView
            android:id="@+id/tv_sex_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/default_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_sex" />

        <TextView
            android:id="@+id/tv_bg_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_bg"
            app:layout_constraintBottom_toBottomOf="@+id/tv_bg"
            app:layout_constraintStart_toStartOf="@+id/tv_sex_value" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
